@@ -1,6 +1,7 @@
 // Package HForms.Util
 if (!window.HForms) window.HForms = {};
 HForms.Util = (function () {
+   const formClassName = 'classic';
    const wrapperIdPrefix = 'field_';
    async function _showIfRequired(url, toggleFieldNames) {
       const response = await fetch(url, { method: 'GET' });
@@ -10,7 +11,7 @@ HForms.Util = (function () {
          const inputField = document.getElementById(name);
          const options = { duration: 800, fill: 'forwards' };
          if (object['found']) {
-            if (inputField.getAttribute('wasrequired')) {
+            if (inputField && inputField.getAttribute('wasrequired')) {
                inputField.setAttribute('required', 'required');
                inputField.removeAttribute('wasrequired');
             }
@@ -20,24 +21,29 @@ HForms.Util = (function () {
          }
          else {
             toggleField.animate({ opacity: 0 }, options);
-            if (inputField.getAttribute('required') == 'required') {
+            if (inputField &&inputField.getAttribute('required') == 'required'){
                inputField.removeAttribute('required');
                inputField.setAttribute('wasrequired', true);
             }
          }
       }
-   }
-   const focusFirst = function(className) {
-      const forms = document.getElementsByTagName('form');
-      if (!forms) return;
-      for (const form of forms) {
-         if (className && form.className != className) continue;
-         const selector = 'div.input-field:not(.input-hidden) input';
-         const field = form.querySelector(selector);
-         if (!field) continue;
-         field.focus();
-         break;
+   };
+   const animateButtons = function(form) {
+      const selector = 'div.input-button button';
+      for (const button of form.querySelectorAll(selector)) {
+         button.addEventListener('mousemove', function(event) {
+            const rect = button.getBoundingClientRect();
+            const x = Math.floor(event.pageX - (rect.left + window.scrollX));
+            const y = Math.floor(event.pageY - (rect.top + window.scrollY));
+            button.style.setProperty('--x', x + 'px');
+            button.style.setProperty('--y', y + 'px');
+         });
       }
+   };
+   const focusFirst = function(form) {
+      const selector = 'div.input-field:not(.input-hidden) input';
+      const field = form.querySelector(selector);
+      if (field) { field.focus() }
    };
    const onReady = function(callback) {
       if (document.readyState != 'loading') callback();
@@ -47,11 +53,20 @@ HForms.Util = (function () {
          if (document.readyState == 'complete') callback();
       });
    };
+   const scan = function(className = formClassName) {
+      const forms = document.getElementsByTagName('form');
+      if (!forms) return;
+      for (const form of forms) {
+         if (form.className == className) {
+            focusFirst(form);
+            animateButtons(form);
+         }
+      }
+   };
    const showIfRequired = function(url, valueFieldName, toggleFieldNames) {
       const target = new URL(url);
-      target.searchParams.set(
-         'value', document.getElementById(valueFieldName).value
-      );
+      const field = document.getElementById(valueFieldName);
+      target.searchParams.set('value', field.value);
       _showIfRequired(target, toggleFieldNames);
    };
    const unrequire = function(fieldNames) {
@@ -62,6 +77,36 @@ HForms.Util = (function () {
             field.setAttribute('wasrequired', true);
          }
       }
+   };
+   const updateDigits = function(id, index) {
+      let total = '';
+      let count = 0;
+      let el;
+      let target;
+      while (el = document.getElementById(id + '-' + count)) {
+         if (count == index) target = el;
+         const value = el.value;
+         total += `${value}`;
+         count += 1;
+      }
+      el = document.getElementById(id);
+      if (el) el.value = total;
+      const sibling = target.nextElementSibling;
+      if (sibling) el = sibling;
+      else {
+         const universe = document.querySelectorAll(
+            'input, button, select, textarea'
+         );
+         const list = Array.prototype.filter.call(
+            universe, function(item) { return item.tabIndex >= '0' }
+         );
+         const index = list.indexOf(el);
+         el = list[index + count + 1] || list[0];
+      }
+      if (el) {
+         el.focus();
+         if (el.select) el.select();
+      }
    }
    const updateTimeWithZone = function(id) {
       const hours = document.getElementById(id + '_hours').value;
@@ -69,12 +114,13 @@ HForms.Util = (function () {
       const zone  = document.getElementById(id + '_zone').value;
       document.getElementById(id).value = hours + ':' + mins + ' ' + zone;
    };
-   onReady(function(event) { focusFirst('classic') });
+   onReady(function(event) { scan() });
    return {
-      focusFirst: focusFirst,
       onReady: onReady,
+      scan: scan,
       showIfRequired: showIfRequired,
       unrequire: unrequire,
+      updateDigits: updateDigits,
       updateTimeWithZone: updateTimeWithZone,
       wrapperIdPrefix: wrapperIdPrefix
    };
