@@ -1,7 +1,7 @@
 [% BLOCK button -%]
   <[% f.html_element %][%- process_attrs( f.attributes ) -%]
  type="[% f.input_type %]" name="[% f.html_name %]" id="[% f.id %]"
- value="[% f.value | html %]">[% f.label %]</[% f.html_element %]>
+ value="[% f.value | html %]"><span>[% f.label %]</span></[% f.html_element %]>
 [% END -%]
 
 [% BLOCK captcha -%]
@@ -30,6 +30,18 @@
 [%     END -%]
 [%     process_attrs( f.attributes ) -%]
  value="[% option.value | html %]" />[% localise( option.label ) | html -%]</label>
+[%   END -%]
+[% END -%]
+
+[% BLOCK digits -%]
+[%   count = 0; attr = f.attributes; attr.size = 1; attr.class = 'digit' -%]
+  <input type="hidden" name="[% f.html_name %]" id="[% f.id %]" required="[% attr.required %]" value="">
+[%   WHILE count < f.size -%]
+[%     id = f.id _ '-' _ count -%]
+[%     attr.javascript = "oninput=\"HForms.Util.updateDigits('" _ f.id _ "', " _ count _ ")\"" %]
+  <input type="[% f.input_type %]" name="[% id %]" id="[% id %]"
+[%-  process_attrs( attr ) %] value="" />
+[%     count = count + 1 -%]
 [%   END -%]
 [% END -%]
 
